baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__heterogeneous_collection.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== STRONG AST ERROR ===
An element at heterogeneous_collection.baml:4:11 was a token when it should have been a node.
