baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__lambda_throws_violation.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
// === Lambda throws contract violations (should produce errors) ===

// Lambda with explicit throws never but body throws - should error
function test_throws_never_but_throws() -> int {
    let f = () -> int throws never {
        throw "boom"
    }
    f()
}
