baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__optional_call_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== STRONG AST ERROR ===
Unexpected additional element at optional_call_throws.baml:3:47
